# micro-app-mcp

./: .cz.yaml  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SELECTION_EVALUATION.md  SPEC.md  pyproject.toml  test_client.py  test_imports.py  test_mcp_import.py  test_server.py
.githooks/: pre-commit
.github/workflows/: release-pypi.yml
scripts/: __init__.py  generate_changelog.py  install_hooks.sh  version_change_detector.py
src/micro_app_mcp/: __init__.py  config.py  main.py
src/micro_app_mcp/app/: __init__.py  server.py  tools.py
src/micro_app_mcp/knowledge/: __init__.py  base.py  docs_loader.py  github_loader.py  text_splitter.py  vectorizer.py
src/micro_app_mcp/storage/: metadata.py  vector_store.py
src/micro_app_mcp/utils/: logger.py
tests/: test_config.py  test_knowledge.py  test_logger.py  test_release_automation.py  test_tools.py
