[project]
name = "micro-app-mcp"
version = "0.1.6"
authors = [{ name = "Sam Xu", email = "twonian@gmail.com" }]
description = "MCP Server for micro-app knowledge base"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "mcp",
    "micro-app",
    "knowledge-base",
    "ai-agent",
    "vector-database",
    "chromadb",
    "model-context-protocol",
]
dependencies = [
    "fastmcp>=3.0.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.0",
    "chromadb>=1.5.0",
    "playwright>=1.40.0",
    "huggingface-hub>=1.4.1",
    "sentence-transformers>=5.2.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "PyGithub>=2.8.1",
    "mcp>=1.26.0",
    "html2text>=2025.4.15",
    "langchain-chroma>=1.1.0",
    "langchain-text-splitters>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "commitizen>=4.13.9",
    "ruff>=0.15.3",
]

[project.urls]
Homepage = "https://github.com/didengren/micro-app-mcp"
Repository = "https://github.com/didengren/micro-app-mcp"
Issues = "https://github.com/didengren/micro-app-mcp/issues"
Changelog = "https://github.com/didengren/micro-app-mcp/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" } # 告诉 setuptools：根包在 src/ 下，决定 wheel 包的目录结构没有包含 src 目录本身

[tool.setuptools.packages.find]
where = ["src"]              # 在 src/ 目录下查找包，有配置 package-dir，此处可省略
include = ["micro_app_mcp*"] # 包含 micro_app_mcp 及其所有子包

[project.scripts]
micro-app-mcp = "micro_app_mcp.main:main"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
